2009-Aug-22     cpo     Fix datagram writing bug in Recorder.cc
2009-Aug-21     cpo     Add acqiris calibration code, and profile histograms to AcqConfig
2009-Aug-18	weaver  Tag V01-01-00.  Added run statistics to control_gui display by forwarding
			summarized L1Accepts (damage and size) to control level.  Created shared memory
			client version of monobs.  Changed interface to configdb to allow editing
			of XTC files.  Versioning is kept internally.
2009-Aug-15	weaver	Tag V01-00-03.  Changed monobs/CamDisplay and AcqDisplay to
			serve all channels found on Configure.  Rearranged production
			code into dev and devtest packages.
2009-Aug-12	weaver	Tag V01-00-02 for production release.
2009-Aug-11	jackp	Moved production code out of devtest into new package called dev.
2009-Aug-4	weaver	Fixed xtc file viewing in configdb_gui.  Added read-replace and
			read-append buttons for creating new xtcs (replacing configuration
			cycles or appending them).
2009-Jul-22	weaver	Tag V01-00-01. Synchronized with pds V01-00-01.  
			Configdb fixes to file permissions, hexadecimal integer support,
			viewing.
			RunControl fixes to EPICS interface, configuration.
2009-Jul-21	jackp	Added monshmserver
2009-Jul-17	jackp	Changed DetInfo reference in segtest.cc to pnCCDframe and added devtest/xtctruncate
2009-Jul-14	weaver	Tag V01-00-00. Consistent with pds V01-00-00.  Added pdsapp/control
2009-Jul-10     cpo     Support for configuration of acqiris from database
01-Jul-2009	weaver  config - added view only option to configdb_gui
22-Jun-2009	weaver  config - fixed early delete of ParameterSet objects.
01-Jun-2009	weaver	Added test/control as a model for run control sequencer.
16-Apr-2009	weaver	Fixed some bugs in configdb_gui (always generated new keys).
			Added Pulnix TM6740CL to configdb_gui and devtest/tm6740.
			Added -d option to devtest/evr to simulate dropped evr multicasts.
			Added vmon archiving.  Added error message from test/StatsApp to